@@ -37,8 +37,8 @@ public class DoubleRange implements Comparable<DoubleRange> {
 	 * <strong>Should</strong> return infinite low and high if called with null parameters
 	 */
 	public DoubleRange(Double low, Double high) {
-		this.low = low == null ? new Double(Double.NEGATIVE_INFINITY) : low;
-		this.high = high == null ? new Double(Double.POSITIVE_INFINITY) : high;
+		this.low = low == null ? Double.valueOf(Double.NEGATIVE_INFINITY) : low;
+		this.high = high == null ? Double.valueOf(Double.POSITIVE_INFINITY) : high;
 	}
 	
 	/**
@@ -56,7 +56,7 @@ public class DoubleRange implements Comparable<DoubleRange> {
 	 * <strong>Should</strong> cause low to have the set value
 	 */
 	public void setHigh(Double high) {
-		this.high = high == null ? new Double(Double.POSITIVE_INFINITY) : high;
+		this.high = high == null ? Double.valueOf(Double.POSITIVE_INFINITY) : high;
 	}
 	
 	/**
@@ -74,7 +74,7 @@ public class DoubleRange implements Comparable<DoubleRange> {
 	 * <strong>Should</strong> cause low to have the set value
 	 */
 	public void setLow(Double low) {
-		this.low = low == null ? new Double(Double.NEGATIVE_INFINITY) : low;
+		this.low = low == null ? Double.valueOf(Double.NEGATIVE_INFINITY) : low;
 	}
 	
 	/**
@@ -167,8 +167,7 @@ public class DoubleRange implements Comparable<DoubleRange> {
 	
 	@Override
 	public boolean equals(Object o) {
-		if (o instanceof DoubleRange) {
-			DoubleRange other = (DoubleRange) o;
+		if (o instanceof DoubleRange other) {
 			return low.equals(other.low) && high.equals(other.high);
 		}
 		return false;
